--- a/recipes.html
+++ b/recipes.html
@@ -202,7 +202,7 @@
                     </div>
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(3.2rem);">
                         <div>
-                            <p style="font-weight: bold;">© MS Solutions AS</p>
+                            <p style="font-weight: bold;">© DECAPOD AS</p>
                         </div>
                     </div>
                 </section>
