--- a/sustainability.html
+++ b/sustainability.html
@@ -51,27 +51,35 @@
                     <h1 class="title-sustainability-title">Sustainability</h1>
                     <h2 class="title-sustainability-supportingtext">Maximum taste. Minimum Waste.</h2>
                 </section>
-            </section>
-        </head>
-        <img class="starfish" src="media/Starfish.png">
-        <section class="section-container">
-            <section class="section">
-                <section class="section1">
+                <section class="obligation">
                     <h1 style="color:#104364; margin-bottom: 1rem; margin-top: 0;">Our Obligation to Nature</h1>
                     <p style="font-size: 2rem; margin-top: 0;">We reduce the resource burden to our planet and foster a sustainable future with record low Co2e emissions and efficient feeding, while maintaining the highest standards of animal well-being.</p>
                 </section>
+            </section>
+        </head>
+        <section class="section-container">
+            <section class="section">
+                <section class="section1">
+                </section>
                 <section class="section2">
-                    <h1 style="padding-top: 2.5rem; padding-bottom: 1rem; z-index: 2; color:#104364" >CO<sub>2</sub>e</h1>
-                    <img src="media/Co2e.svg" style="width: 100%;">
+                    <h1 style="margin-top: 10rem; margin-bottom: 2rem; z-index: 2; color:#104364" >CO<sub>2</sub>e Emissions</h1>
+                    <p style="font-size: 2rem;">We measure environmental burden on a Co2 equivalent basis. This includes other greenhouse gases such as methane and nitrous oxide and is therefore a more comprehensive measure of climate impact.</p>
+                    <img src="media/Co2e.png" style="width: 100%; margin-bottom: 2rem; margin-top: 2rem;">
+                    <p style="font-size: 2rem; ">Decapod crab has by far the lowest carbon footprint of any farmed meats — beating beef fifteenfold and chicken fivefold. Even our closest competitor, salmon, still has 67% higher emissions.</p>
                 </section>
                 <section class=section3>
-                    <h1 style="padding-top: 3rem; padding-bottom: 2.5rem;z-index: 2; color: #104364" >Feed Conversion Ratio</h1>
+                    <h1 style="color: #104364; margin-bottom: 0;" >Feed Conversion Ratio </h1>
+                    <p style="font-size: 2rem;">Feeding the world sustainability requires efficient feeding. By working to reduce the amount of feed required to produce 1 kilogram of edible meat, we are saving the planets scarce resources.</p>
                 </section>
                 <section class="section4">
-                    <img src="media/cow.svg" style="width:65rem; margin-bottom: 3rem;">
-                    <img src="media/chicken.svg" style="width: 65rem; margin-bottom: 3rem;">
-                    <img src="media/fish.svg" style="width: 65rem; margin-bottom: 3rem;">
-                    <img src="media/crab.svg" style="width: 65rem; margin-bottom: 3rem;">
+                    <img src="media/cow.png" style="width:65rem; margin-bottom: 0;">
+                    <p style="font-size: 2rem; transform: translateY(-6.4rem); margin-left: 7rem; margin-bottom: 0;">Twelve kilos of feed goes into every kilo of beef</p>
+                    <img src="media/chicken.png" style="width: 65rem; margin-bottom: 4.5rem;">
+                    <p style="font-size: 2rem; transform: translateY(-6rem); margin-left: 7rem; margin-bottom: 0;">Three kilos of feed goes into every kilo of chicken</p>
+                    <img src="media/fish.png" style="width: 65rem; margin-bottom: 4.5rem;">
+                    <p style="font-size: 2rem; transform: translateY(-6rem); margin-left: 7rem; margin-bottom: 0;">One and a half kilos of feed goes into every kilo of salmon</p>
+                    <img src="media/Crab3.png" style="width: 65rem; margin-bottom: 4.5rem;">
+                    <p style="font-size: 2rem; transform: translateY(-6rem); margin-left: 7rem; margin-bottom: 0;">Just over one kilo feed goes into every kilo of crab</p>
                 </section>
                 
                 <script type="text/javascript">
@@ -123,7 +131,7 @@
                     </div>
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(3.2rem);">
                         <div>
-                            <p style="font-weight: bold;">© MS Solutions AS</p>
+                            <p style="font-weight: bold;">© DECAPOD AS</p>
                         </div>
                     </div>
                 </section>
