--- a/team.html
+++ b/team.html
@@ -99,7 +99,7 @@
                     </div>
                     <div style="display:flex; align-items: center; justify-content: center;">
                         <div>
-                            <p style="font-weight: bold;">© MS Solutions AS</p>
+                            <p style="font-weight: bold;">© DECAPOD AS</p>
                         </div>
                     </div>
                 </section>
