--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(3.2rem);">
                         <div>
-                            <h3 style="font-weight: bold;">© MS Solutions AS</h3>
+                            <h3 style="font-weight: bold;">© DECAPOD AS</h3>
                         </div>
                     </div>
                 </section>
