--- a/instructions.html
+++ b/instructions.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 
+<!-- DOCUMENT FORMATTING-->
 <html lang="en">
     <!--META-->
     <meta charset="uft-8">
@@ -10,7 +11,7 @@
     <body>
         <!--HEAD-->
         <head class="head">
-            <section class="background">
+            <section class="background-instructions">
                 <!--NAV-->
                 <title>DECAPOD</title>
                 <section class="logo-container">
@@ -38,7 +39,7 @@
                                     <li><a href="index.html">HOME</a></li>
                                     <li><a href="products.html">PRODUCTS</a></li>
                                     <li><a href="team.html">OUR TEAM</a></li>
-                                    <li><a href="recipes.html">Recipes</a></li>
+                                    <li><a href="recipes.html">RECIPES</a></li>
                                     <li><a href="partners.html">PARTNERS</a></li>
                                     <li><a href="sustainability.html">SUSTAINABILITY</a></li>
                                 </ul>
@@ -46,5 +47,10 @@
                         </div>
                     </div>
                 </div>
-            </section> 
+            </section>
+            <section class="">
+                <section>
+                    
+                </section>
+            </section>
         </head>
