--- a/products.html
+++ b/products.html
@@ -11,7 +11,7 @@
     <body>
         <!--HEAD-->
         <head class="head">
-            <section class="background">
+            <section class="background-products">
                 <!--NAV-->
                 <title>DECAPOD</title>
                 <section class="logo-container">
@@ -47,10 +47,8 @@
                         </div>
                     </div>
                 </div>
-                <section class="title">
-                    <img class="title-logo" src="media/Logo.png" alt="logo">
-                    <h1 class="title-title">Feeding the World Sustainably</h1>
-                    <h1 class="title-supportingtext">Pure Norwegian Live Crab</h1>
+            </section>
+                <section class="timeline-container">
+                    <img class="timeline" src="media/Timeline.png">
                 </section>
-            </section> 
         </head>
