--- a/recipes.html
+++ b/recipes.html
@@ -52,137 +52,48 @@
         <section class="card">
             <section class="card-content">
                 <h2 class="card-title">Singapore Crab</h2>
-                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab</p>
-                <section class="card-recipe">
-                    <p style="text-align: center;">Do This</p>
-                    <p style="text-align: center;">Ingredients</p>
-                    <ul style="list-style-type: none; list-style-position: inside; padding-left: 0;";> 
-                        <li style="margin-bottom: 1rem;">The crab must be prepared before stir-frying (you can ask your fishmonger to do this). This involves removing the claws, the main shell, discarding the dead man’s fingers, then cutting the body into four pieces, and cracking the claws and the legs so the sauce can get through to the meat.</li>
-                        <li style="margin-bottom: 1rem;">Heat the oil in a large wok and sizzle the garlic, ginger and chopped chillies for 1 min or until fragrant. Add the ketchup, soy and 100ml water, and stir to combine. Throw in the crab, turn up the heat and stir-fry for 3-5 mins or until the crab is piping hot and coated in the sauce. Stir through most of the coriander, spring onions and sliced chilli.</li>
-                        <li>Use tongs to arrange the crab on a serving dish, pour over the sauce from the pan and scatter over the remaining coriander, spring onions and sliced chilli. Serve with rice or bao buns, and a lot of napkins.</li>
-                    </ul>
-                    <ul>
-                        <li>2 whole cooked Decapod Crabs</li>
-                        <li>2 tbsp flavourless oil</li>
-                        <li>3 Garlic cloves, very finely chopped</li>
-                        <li>Thumb sized piece of giner, finely chopped</li>
-                        <li>3 red chillies</li>
-                        <li>4 tbsp tomato ketchup</li>
-                        <li>2 tbsp soy sauce</li>
-                        <li>Handfull coriander leaves, roughly chopped</li>
-                        <li>2 spring onions</li>
-                        <li>Rice or steamed bad buns to serve</li>
-                    </ul>
-                </section>
+                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
             </section>
+            <div class="arrow"></div>
+            <a href="instructions.html">
+                <span class="link"></span>
+            </a>
         </section>
         <section class="card">
             <section class="card-content">
                 <h2 class="card-title">Singapore Crab</h2>
-                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab</p>
-                <section class="card-recipe">
-                    <p style="text-align: center;">Do This</p>
-                    <p style="text-align: center;">Ingredients</p>
-                    <ul style="list-style-type: none; list-style-position: inside; padding-left: 0;";> 
-                        <li style="margin-bottom: 1rem;">The crab must be prepared before stir-frying (you can ask your fishmonger to do this). This involves removing the claws, the main shell, discarding the dead man’s fingers, then cutting the body into four pieces, and cracking the claws and the legs so the sauce can get through to the meat.</li>
-                        <li style="margin-bottom: 1rem;">Heat the oil in a large wok and sizzle the garlic, ginger and chopped chillies for 1 min or until fragrant. Add the ketchup, soy and 100ml water, and stir to combine. Throw in the crab, turn up the heat and stir-fry for 3-5 mins or until the crab is piping hot and coated in the sauce. Stir through most of the coriander, spring onions and sliced chilli.</li>
-                        <li>Use tongs to arrange the crab on a serving dish, pour over the sauce from the pan and scatter over the remaining coriander, spring onions and sliced chilli. Serve with rice or bao buns, and a lot of napkins.</li>
-                    </ul>
-                    <ul>
-                        <li>2 whole cooked Decapod Crabs</li>
-                        <li>2 tbsp flavourless oil</li>
-                        <li>3 Garlic cloves, very finely chopped</li>
-                        <li>Thumb sized piece of giner, finely chopped</li>
-                        <li>3 red chillies</li>
-                        <li>4 tbsp tomato ketchup</li>
-                        <li>2 tbsp soy sauce</li>
-                        <li>Handfull coriander leaves, roughly chopped</li>
-                        <li>2 spring onions</li>
-                        <li>Rice or steamed bad buns to serve</li>
-                    </ul>
-                </section>
+                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
             </section>
+            <a href="instructions.html">
+                <span class="link"></span>
+            </a>
         </section>
         <section class="card">
             <section class="card-content">
                 <h2 class="card-title">Singapore Crab</h2>
-                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab</p>
-                <section class="card-recipe">
-                    <p style="text-align: center;">Do This</p>
-                    <p style="text-align: center;">Ingredients</p>
-                    <ul style="list-style-type: none; list-style-position: inside; padding-left: 0;";> 
-                        <li style="margin-bottom: 1rem;">The crab must be prepared before stir-frying (you can ask your fishmonger to do this). This involves removing the claws, the main shell, discarding the dead man’s fingers, then cutting the body into four pieces, and cracking the claws and the legs so the sauce can get through to the meat.</li>
-                        <li style="margin-bottom: 1rem;">Heat the oil in a large wok and sizzle the garlic, ginger and chopped chillies for 1 min or until fragrant. Add the ketchup, soy and 100ml water, and stir to combine. Throw in the crab, turn up the heat and stir-fry for 3-5 mins or until the crab is piping hot and coated in the sauce. Stir through most of the coriander, spring onions and sliced chilli.</li>
-                        <li>Use tongs to arrange the crab on a serving dish, pour over the sauce from the pan and scatter over the remaining coriander, spring onions and sliced chilli. Serve with rice or bao buns, and a lot of napkins.</li>
-                    </ul>
-                    <ul>
-                        <li>2 whole cooked Decapod Crabs</li>
-                        <li>2 tbsp flavourless oil</li>
-                        <li>3 Garlic cloves, very finely chopped</li>
-                        <li>Thumb sized piece of giner, finely chopped</li>
-                        <li>3 red chillies</li>
-                        <li>4 tbsp tomato ketchup</li>
-                        <li>2 tbsp soy sauce</li>
-                        <li>Handfull coriander leaves, roughly chopped</li>
-                        <li>2 spring onions</li>
-                        <li>Rice or steamed bad buns to serve</li>
-                    </ul>
-                </section>
+                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
             </section>
+            <a href="instructions.html">
+                <span class="link"></span>
+            </a>
         </section>
         <section class="card">
             <section class="card-content">
                 <h2 class="card-title">Singapore Crab</h2>
-                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab</p>
-                <section class="card-recipe">
-                    <p style="text-align: center;">Do This</p>
-                    <p style="text-align: center;">Ingredients</p>
-                    <ul style="list-style-type: none; list-style-position: inside; padding-left: 0;";> 
-                        <li style="margin-bottom: 1rem;">The crab must be prepared before stir-frying (you can ask your fishmonger to do this). This involves removing the claws, the main shell, discarding the dead man’s fingers, then cutting the body into four pieces, and cracking the claws and the legs so the sauce can get through to the meat.</li>
-                        <li style="margin-bottom: 1rem;">Heat the oil in a large wok and sizzle the garlic, ginger and chopped chillies for 1 min or until fragrant. Add the ketchup, soy and 100ml water, and stir to combine. Throw in the crab, turn up the heat and stir-fry for 3-5 mins or until the crab is piping hot and coated in the sauce. Stir through most of the coriander, spring onions and sliced chilli.</li>
-                        <li>Use tongs to arrange the crab on a serving dish, pour over the sauce from the pan and scatter over the remaining coriander, spring onions and sliced chilli. Serve with rice or bao buns, and a lot of napkins.</li>
-                    </ul>
-                    <ul>
-                        <li>2 whole cooked Decapod Crabs</li>
-                        <li>2 tbsp flavourless oil</li>
-                        <li>3 Garlic cloves, very finely chopped</li>
-                        <li>Thumb sized piece of giner, finely chopped</li>
-                        <li>3 red chillies</li>
-                        <li>4 tbsp tomato ketchup</li>
-                        <li>2 tbsp soy sauce</li>
-                        <li>Handfull coriander leaves, roughly chopped</li>
-                        <li>2 spring onions</li>
-                        <li>Rice or steamed bad buns to serve</li>
-                    </ul>
-                </section>
+                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
             </section>
+            <a href="instructions.html">
+                <span class="link"></span>
+            </a>
         </section>
         <section class="card">
             <section class="card-content">
                 <h2 class="card-title">Singapore Crab</h2>
-                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab</p>
-                <section class="card-recipe">
-                    <p style="text-align: center;">Do This</p>
-                    <p style="text-align: center;">Ingredients</p>
-                    <ul style="list-style-type: none; list-style-position: inside; padding-left: 0;";> 
-                        <li style="margin-bottom: 1rem;">The crab must be prepared before stir-frying (you can ask your fishmonger to do this). This involves removing the claws, the main shell, discarding the dead man’s fingers, then cutting the body into four pieces, and cracking the claws and the legs so the sauce can get through to the meat.</li>
-                        <li style="margin-bottom: 1rem;">Heat the oil in a large wok and sizzle the garlic, ginger and chopped chillies for 1 min or until fragrant. Add the ketchup, soy and 100ml water, and stir to combine. Throw in the crab, turn up the heat and stir-fry for 3-5 mins or until the crab is piping hot and coated in the sauce. Stir through most of the coriander, spring onions and sliced chilli.</li>
-                        <li>Use tongs to arrange the crab on a serving dish, pour over the sauce from the pan and scatter over the remaining coriander, spring onions and sliced chilli. Serve with rice or bao buns, and a lot of napkins.</li>
-                    </ul>
-                    <ul>
-                        <li>2 whole cooked Decapod Crabs</li>
-                        <li>2 tbsp flavourless oil</li>
-                        <li>3 Garlic cloves, very finely chopped</li>
-                        <li>Thumb sized piece of giner, finely chopped</li>
-                        <li>3 red chillies</li>
-                        <li>4 tbsp tomato ketchup</li>
-                        <li>2 tbsp soy sauce</li>
-                        <li>Handfull coriander leaves, roughly chopped</li>
-                        <li>2 spring onions</li>
-                        <li>Rice or steamed bad buns to serve</li>
-                    </ul>
-                </section>
+                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
             </section>
+            <a href="instructions.html">
+                <span class="link"></span>
+            </a>
         </section>
          <!--FOOTER-->
          <section class="footer" style="background: linear-gradient(#f9f9f9, #63616b);transform: translateY(260rem);">
