--- a/sustainability.html
+++ b/sustainability.html
@@ -79,9 +79,9 @@
                     <img src="media/fish.png" style="width: 65rem; margin-bottom: 4.5rem;">
                     <p style="font-size: 2rem; transform: translateY(-6rem); margin-left: 7rem; margin-bottom: 0;">One and a half kilos of feed goes into every kilo of salmon</p>
                     <img src="media/Crab3.png" style="width: 65rem; margin-bottom: 4.5rem;">
-                    <p style="font-size: 2rem; transform: translateY(-6rem); margin-left: 7rem; margin-bottom: 0;">Just over one kilo feed goes into every kilo of crab</p>
+                    <p style="font-size: 2rem; transform: translateY(-6rem); margin-left: 7rem; margin-bottom: 0;">Just over one kilo feed goes into every kilo of Decapod crab</p>
+                    <p style="font-size: 2rem; text-align: center;">If every household switched out one meat meal a week with crab, then global carbon emissions would be reduced by a bazillion tonnes annually.</p>
                 </section>
-                
                 <script type="text/javascript">
                     function createBubble() {
                         const section =
