--- a/recipes.html
+++ b/recipes.html
@@ -55,7 +55,7 @@
                 <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
             </section>
             <div class="arrow"></div>
-            <a href="instructions.html">
+            <a href="instructions-singaporecrab.html">
                 <span class="link"></span>
             </a>
         </section>
