--- a/recipes.html
+++ b/recipes.html
@@ -49,8 +49,8 @@
                 </div>
             </section> 
         </head>
-        <section class="card">
-            <section class="card-content">
+        <section class="card card1">
+            <section class="card-content" >
                 <h2 class="card-title">Singapore Crab</h2>
                 <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
             </section>
@@ -59,39 +59,21 @@
                 <span class="link"></span>
             </a>
         </section>
-        <section class="card">
+        <section class="card card2">
             <section class="card-content">
-                <h2 class="card-title">Singapore Crab</h2>
-                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
+                <h2 class="card-title">Crab Uramaki</h2>
+                <p class="card-body" style="width: 80%; font-weight: bold;">Uramaki Sushi with Chilli Crab makes one of the best sushi rolls around. Tasy, easy to make, and looks impressive.</p>
             </section>
-            <a href="instructions.html">
+            <a href="instructions-sushi.html">
                 <span class="link"></span>
             </a>
         </section>
-        <section class="card">
+        <section class="card card3">
             <section class="card-content">
-                <h2 class="card-title">Singapore Crab</h2>
-                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
+                <h2 class="card-title">Avocado Crab Boats</h2>
+                <p class="card-body" style="width: 80%; font-weight: bold;">These boats are wonderful with tortilla chips, beans or rice. You can also cover them, pack them on ice, and take them to a picnic or potluck. Straight from the oven or cold, they're always delicious</p>
             </section>
-            <a href="instructions.html">
-                <span class="link"></span>
-            </a>
-        </section>
-        <section class="card">
-            <section class="card-content">
-                <h2 class="card-title">Singapore Crab</h2>
-                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
-            </section>
-            <a href="instructions.html">
-                <span class="link"></span>
-            </a>
-        </section>
-        <section class="card">
-            <section class="card-content">
-                <h2 class="card-title">Singapore Crab</h2>
-                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab. This low fat, spicy crab dish is a versatile street-food style recipe that can be adapted to your liking. Serve with rice or steamed bao buns</p>
-            </section>
-            <a href="instructions.html">
+            <a href="instructions-avocadocrabboats.html">
                 <span class="link"></span>
             </a>
         </section>
@@ -99,21 +81,23 @@
          <section class="footer" style="background: linear-gradient(#f9f9f9, #63616b);transform: translateY(260rem);">
             <section class="footer-container">
                 <section class="footer-container-text" >
-                    <div style="display:flex; align-items: center; justify-content: center;">
+                    <div style="display:flex; align-items: center; justify-content: center; transform: translateY(-0.6rem);">
                         <div class="footer-decapod-container">
                             <img class="footer-decapod-logo" src="media/logo.svg" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
                             <a class="footer-decapod" href="index.html" style="font-family: raleway, sans-serif; font-size: 2.9rem; text-decoration: none;">DECAPOD</a>
                             <a class="footer-decapod-slogan" href="index.html">Feeding the World Sustainably</a>
                         </div>
                     </div>
-                    <div style="display:flex; align-items: center; justify-content: center; transform: translateY(2.1rem);">
+                    <div style="display:flex; align-items: center; justify-content: center; transform: translateY(1.7rem);">
                         <div>
-                            <p style="font-weight: bold;">Staumøyvegen 28B, 5544 Vålevåg <br> Phone: (+47) 90770976 <br> Email: Inquiries@ms-solutions.no</p>
+                            <a style="margin-bottom: 0;font-family: bree, sans-serif; font-size: 1.2rem;text-decoration: none; color: black" href="https://www.google.com/maps/search/Staum%C3%B8yvegen+28B,+5544+V%C3%A5lev%C3%A5g/@59.6983696,5.4654076,15z/data=!3m1!4b1">Staumøyvegen 28B, 5544 Vålevåg</a><br>
+                            <a href="tel:+47 90770976" style="font-family: bree, sans-serif; font-size: 1.2rem;text-decoration: none; color: black;margin-top: 0; margin-bottom: 0;">Phone: (+47) 90770976</h3><br>
+                            <a style="font-family: bree, sans-serif; font-size: 1.2rem; margin-top: 0;text-decoration: none; color: black;" href="mailto:inquiries@ms-solutions.no">Email: Inquiries@ms-solutions.no</a>
                         </div>
                     </div>
-                    <div style="display:flex; align-items: center; justify-content: center; transform: translateY(3.2rem);">
+                    <div style="display:flex; align-items: center; justify-content: center; transform: translateY(0rem);">
                         <div>
-                            <p style="font-weight: bold;">© DECAPOD AS</p>
+                            <h3 style="font-weight: bold; font-family: bree;">© DECAPOD AS</h3>
                         </div>
                     </div>
                 </section>
