--- a/sustainability.html
+++ b/sustainability.html
@@ -69,7 +69,7 @@
                 </section>
                 <section class=section3>
                     <h1 style="color: #104364; margin-bottom: 0;" >Feed Conversion Ratio </h1>
-                    <p style="font-size: 2rem;">Feeding the world sustainability requires efficient feeding. By working to reduce the amount of feed required to produce 1 kilogram of edible meat, we are saving the planet's scarce resources.</p>
+                    <p style="font-size: 2rem;">Feeding the world sustainability requires efficient feeding. By working to reduce the amount of feed required to produce 1 kilogram of edible meat, we are saving our planet's scarce resources.</p>
                 </section>
                 <section class="section4">
                     <img src="media/cow.png" style="width:65rem; margin-bottom: 0;">
