--- a/products.html
+++ b/products.html
@@ -48,11 +48,13 @@
                     </div>
                 </div>
             </section>
-                <section class="timeline-container">
-                    <img class="timeline" src="media/Timeline.png">
-                </section>
+            <section class="timeline-container">
+                <img class="timeline" src="media/Timeline.png">
+                <img class="crabonplate" src="media/crabonplate.png">
+            </section>
+
         </head>
-        <section class="footer" style="background: linear-gradient(#f9f9f9, #1897cc);transform: translateY(100rem);">
+        <section class="footer" style="background: linear-gradient(#f9f9f9, #1897cc);transform: translateY(145rem);">
             <section class="footer-container">
                 <section class="footer-container-text" >
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(-0.6rem);">
