--- a/instructions-sushi.html
+++ b/instructions-sushi.html
@@ -16,10 +16,15 @@
                 <title>DECAPOD</title>
                 <section class="logo-container">
                     <img class="logo" src="media/logo.svg">
-                    <a href="index.html" class="decapod">DECAPOD</a>
-                    <a href="index.html" class="slogan" href="#index">Feeding the World Sustainably</a>
+                    <a href="index.html" class="decapod" style="color: #233866;">DECAPOD</a>
+                    <a href="index.html" class="slogan" href="#index" style="color: #233866;">Feeding the World Sustainably</a>
                 </section>
                 <section class="nav-container">
+                    <style>
+                        nav a {
+                            color: black;
+                        }
+                    </style>
                     <nav>
                         <a href="index.html">HOME</a>
                         <a href="products.html">PRODUCTS</a>
