--- a/products.html
+++ b/products.html
@@ -16,10 +16,15 @@
                 <title>DECAPOD</title>
                 <section class="logo-container">
                     <img class="logo" src="media/logo.svg">
-                    <a href="index.html" class="decapod">DECAPOD</a>
-                    <a href="index.html" class="slogan" href="#index">Feeding the World Sustainably</a>
+                    <a href="index.html" class="decapod" style="color: #233866;">DECAPOD</a>
+                    <a href="index.html" class="slogan" href="#index" style="color: #233866;">Feeding the World Sustainably</a>
                 </section>
                 <section class="nav-container">
+                    <style>
+                        nav a {
+                            color: black;
+                        }
+                    </style>
                     <nav>
                         <a href="index.html">HOME</a>
                         <a href="products.html">PRODUCTS</a>
@@ -54,7 +59,7 @@
             </section>
 
         </head>
-        <section class="footer" style="background: linear-gradient(#f9f9f9, #1897cc);transform: translateY(145rem);">
+        <section class="footer" style="background: linear-gradient(#f9f9f9, #1897cc);transform: translateY(160rem);">
             <section class="footer-container">
                 <section class="footer-container-text" >
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(-0.6rem);">
